public/sass/modules/_annotation.scss
// Actions
.activity-actions {
    color: $light-medium-grey;

    .thumbs-up {
        @extend .fa;
        @extend .fa-thumbs-o-up;
    }

    .thumbs-down {
        @extend .fa;
        @extend .fa-thumbs-o-down;
    }

    .flag {
        @extend .fa;
        @extend .fa-flag;
    }

    .link {
        @extend .fa;
        @extend .fa-link;
    }

    .thumbs-up, .thumbs-down, .flag, .link {
        &::before {
            margin-right: 4px;
        }
        margin-right: 15px;
        &:last-child {
            margin-right: 0;
        }
    }
}

.annotation-group {
    position: absolute;
    font-size: 0.85rem;
    color: $dark-grey;
    cursor:pointer;

    .annotation-group-count {
        display: inline-block;
        text-align: center;
        background-color: $lighter-grey;
        height: $line-height-computed;
        min-width: $line-height-computed;
        border-radius: 7px;
    }

    .annotation-group-statistics {
        @extend .fa;
        @extend .fa-comment;
        font-style: italic;
        margin-left: 10px;
        padding: 0 10px;
        display: inline-block;
        line-height: $line-height-computed;

        &::before {
            font-style: normal;
            font-size: 1.2rem;
            margin-right: 6px;
            color: $blue;
        }
    }

    .annotation-comment-count {
        border-left: 1px solid $dark-grey;
        margin-left: 7px;
        padding-left: 7px;
    }

    &:hover, &:active, &.active {
        .annotation-group-count {
            background-color: $medium-grey;
        }

        .annotation-group-statistics {
            background-color: $light-grey;
        }
    }

}

.annotation-pane {
    @extend .col-md-8;
    position: fixed;
    top: 0;
    bottom: 0;
    right: 0;
    height: 100%;
    z-index: 10;
    background-color: $lighter-grey;
    @extend %simple-shadow;
    padding: 0 0 (2 * $line-height-computed);
    // Pad the top to allow the header to float above it.
    margin-top: 0;

    // Slide in/out
    transform: translate3d(0,0,0); // Force hardware rendering
    margin-right: -50%;
    @include single-transition(all, $transition-duration, $transition-easing);
    &.active {
        margin-right: 0;
    }

    .title-header {
        background-color: $dark-grey;
        color: $white;
        padding: 0 20px;
        line-height: (2 * $line-height-computed);
        height: (2 * $line-height-computed);
        width: 100%;
        position: fixed;
        top: 0;
        z-index: 11;
    }

    .annotation-list {
        position: absolute;
        top: (2 * $line-height-computed);
        bottom: 0;
        right: 0;
        width: 100%;
        overflow-y: scroll;
    }

    h2 {
        font-family: $main-font;
        @extend .small-caps;
        font-weight: bold;
        line-height: (2 * $line-height-computed);
        margin-bottom: 0;
        display: inline-block;
    }

    .close-button {
        float: right;
        font-family: $fancy-font;
        font-style: italic;
        line-height: (2 * $line-height-computed);
        font-size: 0.85rem;
    }

    blockquote {
        // Reset our box.
        border-left: 0;
        padding-top: 0;
        margin-left: 0;
        margin-right: 0;
        padding-left: 0;
        padding-right: 0;
        @extend .title-underline-thin;
        border-color: $light-medium-grey;
    }
}

.annotation-pane {
    article {
        /*padding: $line-height-computed 0 0;*/
        margin: 0 20px;
    }

    article.comment {
        border-bottom: 0;
        padding-top: $vertical-padding;
        margin-top: $vertical-padding;
        margin-right: 0;
        border-top: 1px solid $light-medium-grey;
    }
}

.annotation, .comment {
    .author {
        font-weight: bold;
    }

    .date, .activity-actions {
        float: right;
        color: $medium-grey;
    }

    .date {
        font-size: 0.75rem;
    }

    .comment {
        margin-left: 40px;
    }

    .content {
        font-size: 0.85rem;
    }

    .reply-action, .activity-actions {
        display: inline-block;
    }

    .reply-action {
        font-size: 0.75rem;
        font-style: italic;
    }
}

.annotation:not(:last-child) {
    @extend .title-underline-medium;
}

.subcomment-form {
    margin: $line-height-computed;

    h4 {
        @extend .small-caps;
    }

    .comment-button {
        margin: 1rem 0;
    }
}

.annotator-adder, .annotator-outer, .annotator-notice, .annotator-filter {
  z-index: 1000 !important;
}

.mobile-annotation-message {
    display: none;
}

// Mobile phone-sizes
@media only screen and (max-width: $screen-sm-min) {
    .annotation-title {
        display: none;
    }

    .mobile-annotation-message {
        display: block;
        margin: $line-height-computed 0;
        font-style: italic;
    }

    // Leave room for annotation numbers
    .doc-content {
        padding-right: 2rem;
    }

    .annotation-group {
        // Move these over
        right: 0;

        // Make the numbers more visible.
        .annotation-group-count {
        background-color: $dark-grey;
        color: $white;
        }


        // Hide the details on annotations in the sidebar.
        .annotation-group-statistics {
            display: none;
        }
    }

    .annotation-pane {
        left: 100%;

        &.active {
            left: 0;
        }
    }

    // Hide all inline annotations for now.
    .annotator-outer {
        display: none;
    }
}

